{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 140,
  "lineage": "fde3562b-469b-d15f-ff63-e92ba4357e87",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/backendAddressPools/PrivateVM-BackendPool",
                "ip_addresses": [
                  "10.0.2.4"
                ],
                "name": "PrivateVM-BackendPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "dedicated_backend_connection_enabled": false,
                "host_name": "",
                "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/backendHttpSettingsCollection/HTTP-Settings",
                "name": "HTTP-Settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 5656,
                "probe_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/probes/health-Probe",
                "probe_name": "health-Probe",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/frontendIPConfigurations/appgw-frontend-ipconfig",
                "name": "appgw-frontend-ipconfig",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/publicIPAddresses/AppGW-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/frontendPorts/appgw-frontendPort",
                "name": "appgw-frontendPort",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/gatewayIPConfigurations/appgw-ipconfig",
                "name": "appgw-ipconfig",
                "subnet_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/AppGwSubnet"
              }
            ],
            "global": [],
            "http2_enabled": false,
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/frontendIPConfigurations/appgw-frontend-ipconfig",
                "frontend_ip_configuration_name": "appgw-frontend-ipconfig",
                "frontend_port_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/frontendPorts/appgw-frontendPort",
                "frontend_port_name": "appgw-frontendPort",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/httpListeners/HTTP-Listener",
                "name": "HTTP-Listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway",
            "identity": [],
            "listener": [],
            "location": "centralindia",
            "name": "myAppGateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "10.0.2.4",
                "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/probes/health-Probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "health-Probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "port": 5656,
                "protocol": "Http",
                "proxy_protocol_header_enabled": false,
                "timeout": 20,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/backendAddressPools/PrivateVM-BackendPool",
                "backend_address_pool_name": "PrivateVM-BackendPool",
                "backend_http_settings_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/backendHttpSettingsCollection/HTTP-Settings",
                "backend_http_settings_name": "HTTP-Settings",
                "http_listener_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/httpListeners/HTTP-Listener",
                "http_listener_name": "HTTP-Listener",
                "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/applicationGateways/myAppGateway/requestRoutingRules/RoutingRule",
                "name": "RoutingRule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "myRG",
            "rewrite_rule_set": [],
            "routing_rule": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "environment": "dev",
              "project": "myProject"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_linux_virtual_machine.private_vm",
            "azurerm_network_interface.private_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_public_ip.appgw_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appgw",
            "azurerm_subnet.private",
            "azurerm_subnet_network_security_group_association.private_nsg_assoc",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/natGateways/myNatGateway",
            "idle_timeout_in_minutes": 10,
            "location": "centralindia",
            "name": "myNatGateway",
            "resource_group_name": "myRG",
            "resource_guid": "8fc74ef7-8e18-4f64-bcac-42225154bd11",
            "sku_name": "Standard",
            "tags": {
              "environment": "dev",
              "project": "myProject"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "nat_pip_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/natGateways/myNatGateway|/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/publicIPAddresses/NATGW-ip",
            "nat_gateway_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/natGateways/myNatGateway",
            "public_ip_address_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/publicIPAddresses/NATGW-ip"
          },
          "dependencies": [
            "azurerm_nat_gateway.natgw",
            "azurerm_public_ip.natgw_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "private_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/networkInterfaces/PrivateVM-nic",
            "internal_domain_name_suffix": "2de4pj52ewlujooqmlyhijzlsa.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "PrivateVM-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/PrivateSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "7C-ED-8D-9F-42-BA",
            "name": "PrivateVM-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "myRG",
            "tags": {
              "environment": "dev",
              "project": "myProject"
            },
            "virtual_machine_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Compute/virtualMachines/PrivateVM"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "public_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/networkInterfaces/PublicVM-nic",
            "internal_domain_name_suffix": "2de4pj52ewlujooqmlyhijzlsa.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "PublicVM-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/publicIPAddresses/PublicVM-ip",
                "subnet_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/PublicSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "7C-1E-52-3D-1A-08",
            "name": "PublicVM-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "myRG",
            "tags": {
              "environment": "dev",
              "project": "myProject"
            },
            "virtual_machine_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Compute/virtualMachines/PublicVM"
          },
          "dependencies": [
            "azurerm_public_ip.publicvm_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.public",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/networkSecurityGroups/PrivateNSG",
            "location": "centralindia",
            "name": "PrivateNSG",
            "resource_group_name": "myRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHFromPublicSubnet",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5656",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowNodeAppFromAppGW",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65200-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAppGWHealthProbe",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPFromAppGW",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPFromPublicSubnet",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev",
              "project": "myProject"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/networkSecurityGroups/PublicNSG",
            "location": "centralindia",
            "name": "PublicNSG",
            "resource_group_name": "myRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev",
              "project": "myProject"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/publicIPAddresses/AppGW-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.247.129.232",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "AppGW-ip",
            "resource_group_name": "myRG",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "project": "myProject"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "natgw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/publicIPAddresses/NATGW-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.198.119.30",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "NATGW-ip",
            "resource_group_name": "myRG",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "project": "myProject"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicvm_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/publicIPAddresses/PublicVM-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.204.43.217",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "PublicVM-ip",
            "resource_group_name": "myRG",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "project": "myProject"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/AppGwSubnet",
            "name": "AppGwSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myRG",
            "virtual_network_name": "myVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/PrivateSubnet",
            "name": "PrivateSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myRG",
            "virtual_network_name": "myVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/PublicSubnet",
            "name": "PublicSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myRG",
            "virtual_network_name": "myVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "private_subnet_natgw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/PrivateSubnet",
            "nat_gateway_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/natGateways/myNatGateway",
            "subnet_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/PrivateSubnet"
          },
          "dependencies": [
            "azurerm_nat_gateway.natgw",
            "azurerm_resource_group.rg",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/PrivateSubnet",
            "network_security_group_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/networkSecurityGroups/PrivateNSG",
            "subnet_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/PrivateSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/PublicSubnet",
            "network_security_group_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/networkSecurityGroups/PublicNSG",
            "subnet_id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/PublicSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.public",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a7e7c9e0-25fc-4497-b9d0-62f074272b90",
            "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet",
            "location": "centralindia",
            "name": "myVNet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "myRG",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/PublicSubnet",
                "name": "PublicSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/networkSecurityGroups/PublicNSG"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/PrivateSubnet",
                "name": "PrivateSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/networkSecurityGroups/PrivateNSG"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcf95f23-e23c-4b3d-a7ee-cd524c063f88/resourceGroups/myRG/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/AppGwSubnet",
                "name": "AppGwSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}